@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2018 IBM Corporation and others.
+ * Copyright (c) 2000, 2019 IBM Corporation and others.
  *
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
@@ -18,6 +18,7 @@ package org.eclipse.jdt.internal.launching;
 import java.io.File;
 import java.io.IOException;
 import java.io.InterruptedIOException;
+import java.text.DateFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Date;
@@ -30,7 +31,6 @@ import org.eclipse.core.runtime.CoreException;
 import org.eclipse.core.runtime.IPath;
 import org.eclipse.core.runtime.IProgressMonitor;
 import org.eclipse.core.runtime.IStatus;
-import org.eclipse.core.runtime.NullProgressMonitor;
 import org.eclipse.core.runtime.Path;
 import org.eclipse.core.runtime.Platform;
 import org.eclipse.core.runtime.Status;
@@ -50,7 +50,6 @@ import org.eclipse.jdt.launching.JavaRuntime;
 import org.eclipse.jdt.launching.SocketUtil;
 import org.eclipse.jdt.launching.VMRunnerConfiguration;
 
-import com.ibm.icu.text.DateFormat;
 import com.sun.jdi.VirtualMachine;
 import com.sun.jdi.connect.Connector;
 import com.sun.jdi.connect.IllegalConnectorArgumentsException;
@@ -150,8 +149,10 @@ public class StandardVMDebugger extends StandardVMRunner {
 
 	@Override
 	public String showCommandLine(VMRunnerConfiguration configuration, ILaunch launch, IProgressMonitor monitor) throws CoreException {
-		CommandDetails cmd = getCommandLine(configuration, launch, monitor);
-		if (monitor.isCanceled()) {
+		SubMonitor subMonitor = SubMonitor.convert(monitor);
+
+		CommandDetails cmd = getCommandLine(configuration, launch, subMonitor);
+		if (subMonitor.isCanceled()) {
 			return ""; //$NON-NLS-1$
 		}
 		String[] cmdLine = cmd.getCommandLine();
@@ -160,11 +161,13 @@ public class StandardVMDebugger extends StandardVMRunner {
 	}
 
 	private CommandDetails getCommandLine(VMRunnerConfiguration config, ILaunch launch, IProgressMonitor monitor) throws CoreException {
-		if (monitor == null) {
-			monitor = new NullProgressMonitor();
-
-		}
 		IProgressMonitor subMonitor = SubMonitor.convert(monitor, 1);
+
+		// check for cancellation
+		if (subMonitor.isCanceled()) {
+			return null;
+		}
+
 		subMonitor.subTask(LaunchingMessages.StandardVMDebugger_Finding_free_socket____2);
 
 		int port= SocketUtil.findFreePort();
@@ -175,7 +178,7 @@ public class StandardVMDebugger extends StandardVMRunner {
 		subMonitor.worked(1);
 
 		// check for cancellation
-		if (monitor.isCanceled()) {
+		if (subMonitor.isCanceled()) {
 			return null;
 		}
 
@@ -231,6 +234,11 @@ public class StandardVMDebugger extends StandardVMRunner {
 			arguments.add(convertClassPath(cp));
 		}
 
+		// https://openjdk.java.net/jeps/12
+		if (config.isPreviewEnabled()) {
+			arguments.add("--enable-preview"); //$NON-NLS-1$
+		}
+
 		String dependencies = config.getOverrideDependencies();
 		if (dependencies != null && dependencies.length() > 0) {
 			String[] parseArguments = DebugPlugin.parseArguments(dependencies);
@@ -264,7 +272,7 @@ public class StandardVMDebugger extends StandardVMRunner {
 		arguments.toArray(cmdLine);
 
 		// check for cancellation
-		if (monitor.isCanceled()) {
+		if (subMonitor.isCanceled()) {
 			return null;
 		}
 		File workingDir = getWorkingDir(config);
@@ -298,15 +306,15 @@ public class StandardVMDebugger extends StandardVMRunner {
 	 */
 	@Override
 	public void run(VMRunnerConfiguration config, ILaunch launch, IProgressMonitor monitor) throws CoreException {
+		IProgressMonitor subMonitor = SubMonitor.convert(monitor, 1);
+		CommandDetails cmdDetails = getCommandLine(config, launch, subMonitor);
 
-		CommandDetails cmdDetails = getCommandLine(config, launch, monitor);
 		// check for cancellation
-		if (monitor.isCanceled() || cmdDetails == null) {
+		if (subMonitor.isCanceled() || cmdDetails == null) {
 			return;
 		}
 		String[] cmdLine = cmdDetails.getCommandLine();
 
-		IProgressMonitor subMonitor = SubMonitor.convert(monitor, 1);
 		subMonitor.beginTask(LaunchingMessages.StandardVMDebugger_Launching_VM____1, 4);
 		subMonitor.subTask(LaunchingMessages.StandardVMDebugger_Starting_virtual_machine____4);
 		ListeningConnector connector= getConnector();
@@ -320,19 +328,19 @@ public class StandardVMDebugger extends StandardVMRunner {
 		try {
 			try {
 				// check for cancellation
-				if (monitor.isCanceled()) {
+				if (subMonitor.isCanceled()) {
 					return;
 				}
 
 				connector.startListening(map);
 
-				p = exec(cmdLine, cmdDetails.getWorkingDir(), cmdDetails.getEnvp());
+				p = exec(cmdLine, cmdDetails.getWorkingDir(), cmdDetails.getEnvp(), config.isMergeOutput());
 				if (p == null) {
 					return;
 				}
 
 				// check for cancellation
-				if (monitor.isCanceled()) {
+				if (subMonitor.isCanceled()) {
 					p.destroy();
 					return;
 				}
@@ -372,7 +380,7 @@ public class StandardVMDebugger extends StandardVMRunner {
                         connectThread.setDaemon(true);
 						connectThread.start();
 						while (connectThread.isAlive()) {
-							if (monitor.isCanceled()) {
+							if (subMonitor.isCanceled()) {
                                 try {
                                     connector.stopListening(map);
                                 } catch (IOException ioe) {
