@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2018 IBM Corporation and others.
+ * Copyright (c) 2000, 2020 IBM Corporation and others.
  *
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
@@ -35,7 +35,9 @@ import java.util.Hashtable;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import javax.xml.parsers.DocumentBuilder;
 
@@ -198,7 +200,6 @@ public final class JavaRuntime {
 	 * (value <code>executionEnvironments</code>)</li>
 	 * <li>Identifier of a contributed execution environment</li>
 	 * </ol>
-	 * </p>
 	 * @since 2.0
 	 */
 	public static final String JRE_CONTAINER = LaunchingPlugin.getUniqueIdentifier() + ".JRE_CONTAINER"; //$NON-NLS-1$
@@ -525,9 +526,6 @@ public final class JavaRuntime {
 			File location = install.getInstallLocation();
 			if (location != null) {
 				if (location.exists()) {
-					if (LaunchingPlugin.isVMLogging()) {
-						LaunchingPlugin.log(LaunchingMessages.VMLogging_3 + install.getInstallLocation());
-					}
 					return install;
 				}
 			}
@@ -541,11 +539,7 @@ public final class JavaRuntime {
 			fgVMTypes = null;
 			initializeVMs();
 		}
-		install = getVMFromCompositeId(getDefaultVMId());
-		if (LaunchingPlugin.isVMLogging()) {
-			LaunchingPlugin.log(LaunchingMessages.VMLogging_3 + install.getInstallLocation());
-		}
-		return install;
+		return getVMFromCompositeId(getDefaultVMId());
 	}
 
 	/**
@@ -1238,7 +1232,8 @@ public final class JavaRuntime {
 					if (project == null || !p.isOpen() || !project.exists()) {
 						return new IRuntimeClasspathEntry[0];
 					}
-					IRuntimeClasspathEntry[] entries = resolveOutputLocations(project, entry.getClasspathProperty(), excludeTestCode);
+					IClasspathAttribute[] attributes = entry.getClasspathEntry().getExtraAttributes();
+					IRuntimeClasspathEntry[] entries = resolveOutputLocations(project, entry.getClasspathProperty(), attributes, excludeTestCode);
 					if (entries != null) {
 						return entries;
 					}
@@ -1342,7 +1337,8 @@ public final class JavaRuntime {
 					}
 				}
 				// now resolve the archive (recursively)
-				IClasspathEntry archEntry = JavaCore.newLibraryEntry(archPath, srcPath, srcRootPath, entry.getClasspathEntry().isExported());
+				IClasspathEntry cpEntry = entry.getClasspathEntry();
+				IClasspathEntry archEntry = JavaCore.newLibraryEntry(archPath, srcPath, srcRootPath, null, cpEntry.getExtraAttributes(), cpEntry.isExported());
 				IRuntimeClasspathEntry runtimeArchEntry = newRuntimeClasspathEntry(archEntry);
 				runtimeArchEntry.setClasspathProperty(entry.getClasspathProperty());
 				if (configuration == null) {
@@ -1362,6 +1358,8 @@ public final class JavaRuntime {
 	 *            the {@link IJavaProject} to resolve the output locations for
 	 * @param classpathProperty
 	 *            the type of classpath entries to create
+	 * @param attributes
+	 *            extra attributes of the original classpath entry
 	 * @param excludeTestCode
 	 *            if true, output folders corresponding to test sources are excluded
 	 *
@@ -1369,7 +1367,7 @@ public final class JavaRuntime {
 	 * @throws CoreException
 	 *             if output resolution encounters a problem
 	 */
-	private static IRuntimeClasspathEntry[] resolveOutputLocations(IJavaProject project, int classpathProperty, boolean excludeTestCode) throws CoreException {
+	private static IRuntimeClasspathEntry[] resolveOutputLocations(IJavaProject project, int classpathProperty, IClasspathAttribute[] attributes, boolean excludeTestCode) throws CoreException {
 		List<IPath> nonDefault = new ArrayList<>();
 		boolean defaultUsedByNonTest = false;
 		if (project.exists() && project.getProject().isOpen()) {
@@ -1390,7 +1388,7 @@ public final class JavaRuntime {
 				}
 			}
 		}
-		boolean isModular = project.getModuleDescription() != null;
+		boolean isModular = project.getOwnModuleDescription() != null;
 		if (nonDefault.isEmpty() && !isModular && !excludeTestCode) {
 			// return here only if non-modular, because patch-module might be needed otherwise
 			return null;
@@ -1404,7 +1402,7 @@ public final class JavaRuntime {
 		}
 		IRuntimeClasspathEntry[] locations = new IRuntimeClasspathEntry[nonDefault.size()];
 		for (int i = 0; i < locations.length; i++) {
-			IClasspathEntry newEntry = JavaCore.newLibraryEntry(nonDefault.get(i), null, null);
+			IClasspathEntry newEntry = JavaCore.newLibraryEntry(nonDefault.get(i), null, null, null, attributes, false);
 			locations[i] = new RuntimeClasspathEntry(newEntry);
 			if (isModular && !containsModuleInfo(locations[i])) {
 				locations[i].setClasspathProperty(IRuntimeClasspathEntry.PATCH_MODULE);
@@ -1479,7 +1477,8 @@ public final class JavaRuntime {
 					IProject p = (IProject)resource;
 					IJavaProject jp = JavaCore.create(p);
 					if (jp != null && p.isOpen() && jp.exists()) {
-						IRuntimeClasspathEntry[] entries = resolveOutputLocations(jp, entry.getClasspathProperty(), excludeTestCode);
+						IClasspathAttribute[] attributes = entry.getClasspathEntry().getExtraAttributes();
+						IRuntimeClasspathEntry[] entries = resolveOutputLocations(jp, entry.getClasspathProperty(), attributes, excludeTestCode);
 						if (entries != null) {
 							return entries;
 						}
@@ -1562,14 +1561,19 @@ public final class JavaRuntime {
 		int property = -1;
 		switch (container.getKind()) {
 			case IClasspathContainer.K_APPLICATION:
-				if (entry.getClasspathProperty() == IRuntimeClasspathEntry.MODULE_PATH) {
-					property = IRuntimeClasspathEntry.MODULE_PATH;
-				} else if (entry.getClasspathProperty() == IRuntimeClasspathEntry.CLASS_PATH) {
-					property = IRuntimeClasspathEntry.CLASS_PATH;
-				} else {
-					property = IRuntimeClasspathEntry.USER_CLASSES;
+				switch (entry.getClasspathProperty()) {
+					case IRuntimeClasspathEntry.MODULE_PATH:
+						property = IRuntimeClasspathEntry.MODULE_PATH;
+						break;
+					case IRuntimeClasspathEntry.CLASS_PATH:
+						property = IRuntimeClasspathEntry.CLASS_PATH;
+						break;
+					default:
+						property = IRuntimeClasspathEntry.USER_CLASSES;
+						break;
 				}
 				break;
+
 			case IClasspathContainer.K_DEFAULT_SYSTEM:
 				property = IRuntimeClasspathEntry.STANDARD_CLASSES;
 				break;
@@ -1583,11 +1587,11 @@ public final class JavaRuntime {
 		if (projects == null) {
 			projects = new ArrayList<>();
 			fgProjects.set(projects);
-			count = new Integer(0);
+			count = Integer.valueOf(0);
 		}
 		int intCount = count.intValue();
 		intCount++;
-		fgEntryCount.set(new Integer(intCount));
+		fgEntryCount.set(Integer.valueOf(intCount));
 		try {
 			for (int i = 0; i < cpes.length; i++) {
 				IClasspathEntry cpe = cpes[i];
@@ -1618,7 +1622,7 @@ public final class JavaRuntime {
 				fgProjects.set(null);
 				fgEntryCount.set(null);
 			} else {
-				fgEntryCount.set(new Integer(intCount));
+				fgEntryCount.set(Integer.valueOf(intCount));
 			}
 		}
 		// set classpath property
@@ -1868,15 +1872,15 @@ public final class JavaRuntime {
 	}
 
 	/**
-	 * Saves the VM configuration information to the preferences. This includes
-	 * the following information:
+	 * Saves the VM configuration information to the preferences. This includes the following information:
 	 * <ul>
 	 * <li>The list of all defined IVMInstall instances.</li>
 	 * <li>The default VM</li>
-	 * <ul>
-	 * This state will be read again upon first access to VM
-	 * configuration information.
-	 * @throws CoreException if trying to save the current state of VMs encounters a problem
+	 * </ul>
+	 * This state will be read again upon first access to VM configuration information.
+	 *
+	 * @throws CoreException
+	 *             if trying to save the current state of VMs encounters a problem
 	 */
 	public static void saveVMConfiguration() throws CoreException {
 		if (fgVMTypes == null) {
@@ -2233,6 +2237,15 @@ public final class JavaRuntime {
 				// Create a stand-in for the detected VM and add it to the result collector
 				String vmID = String.valueOf(unique);
 				VMStandin detectedVMStandin = new VMStandin(vmType, vmID);
+
+				// Java 9 and above needs the vmInstall location till jre
+				File pluginDir = new File(detectedLocation, "plugins"); //$NON-NLS-1$
+				File featuresDir = new File(detectedLocation, "features"); //$NON-NLS-1$
+				if (pluginDir.exists() && featuresDir.exists()) {
+					if (isJREVersionAbove8(vmType, detectedLocation)) {
+						detectedLocation = new File(detectedLocation, "jre"); //$NON-NLS-1$
+					}
+				}
 				detectedVMStandin.setInstallLocation(detectedLocation);
 				detectedVMStandin.setName(generateDetectedVMName(detectedVMStandin));
 				if (vmType instanceof AbstractVMInstallType) {
@@ -2248,6 +2261,23 @@ public final class JavaRuntime {
 			}
 		}
 		return null;
+	}
+
+	private static boolean isJREVersionAbove8(IVMInstallType vmType, File installLocation) {
+		LibraryLocation[] locations = vmType.getDefaultLibraryLocations(installLocation);
+		boolean exist = true;
+		for (int i = 0; i < locations.length; i++) {
+			exist = exist && new File(locations[i].getSystemLibraryPath().toOSString()).exists();
+		}
+		if (exist) {
+			return false;
+		}
+		exist = true;
+		LibraryLocation[] newLocations = vmType.getDefaultLibraryLocations(new File(installLocation, "jre")); //$NON-NLS-1$
+		for (int i = 0; i < newLocations.length; i++) {
+			exist = exist && new File(newLocations[i].getSystemLibraryPath().toOSString()).exists();
+		}
+		return exist;
 	}
 
 	/**
@@ -2456,7 +2486,6 @@ public final class JavaRuntime {
 	 * <li>When there is no Java project associated with a configuration, the workspace
 	 * default JRE is used to create a container path.</li>
 	 * </ol>
-	 * </p>
 	 * @param configuration the backing {@link ILaunchConfiguration}
 	 * @return classpath container path identifying a JRE or <code>null</code>
 	 * @exception org.eclipse.core.runtime.CoreException if an exception occurs retrieving
@@ -3279,6 +3308,9 @@ public final class JavaRuntime {
 	 * @param vm the backing {@link IVMInstall}
 	 */
 	private static void updateCompliance(IVMInstall vm) {
+		if (LaunchingPlugin.isVMLogging()) {
+			LaunchingPlugin.log("Compliance needs an update."); //$NON-NLS-1$
+		}
         if (vm instanceof IVMInstall2) {
             String javaVersion = ((IVMInstall2)vm).getJavaVersion();
             if (javaVersion != null) {
@@ -3300,8 +3332,17 @@ public final class JavaRuntime {
 				} else if (javaVersion.startsWith(JavaCore.VERSION_11)
 						&& (javaVersion.length() == JavaCore.VERSION_11.length() || javaVersion.charAt(JavaCore.VERSION_11.length()) == '.')) {
 					compliance = JavaCore.VERSION_11;
+				} else if (javaVersion.startsWith(JavaCore.VERSION_12)
+						&& (javaVersion.length() == JavaCore.VERSION_12.length() || javaVersion.charAt(JavaCore.VERSION_12.length()) == '.')) {
+					compliance = JavaCore.VERSION_12;
+				} else if (javaVersion.startsWith(JavaCore.VERSION_13)
+						&& (javaVersion.length() == JavaCore.VERSION_13.length() || javaVersion.charAt(JavaCore.VERSION_13.length()) == '.')) {
+					compliance = JavaCore.VERSION_13;
+				} else if (javaVersion.startsWith(JavaCore.VERSION_14)
+						&& (javaVersion.length() == JavaCore.VERSION_14.length() || javaVersion.charAt(JavaCore.VERSION_14.length()) == '.')) {
+					compliance = JavaCore.VERSION_14;
 				} else {
-					compliance = JavaCore.VERSION_11; // use latest by default
+					compliance = JavaCore.VERSION_14; // use latest by default
 				}
 
             	Hashtable<String, String> options= JavaCore.getOptions();
@@ -3314,11 +3355,21 @@ public final class JavaRuntime {
             			equals(JavaCore.COMPILER_CODEGEN_TARGET_PLATFORM, options, bundleDefaults) &&
             			equals(JavaCore.COMPILER_PB_ASSERT_IDENTIFIER, options, bundleDefaults) &&
             			equals(JavaCore.COMPILER_PB_ENUM_IDENTIFIER, options, bundleDefaults);
+				if (JavaCore.compareJavaVersions(compliance, JavaCore.VERSION_10) > 0) {
+					isDefault = isDefault && equals(JavaCore.COMPILER_PB_ENABLE_PREVIEW_FEATURES, options, bundleDefaults)
+							&& equals(JavaCore.COMPILER_PB_REPORT_PREVIEW_FEATURES, options, bundleDefaults);
+				}
             	// only update the compliance settings if they are default settings, otherwise the
             	// settings have already been modified by a tool or user
+				if (LaunchingPlugin.isVMLogging()) {
+					LaunchingPlugin.log("Compliance to be updated is: " + compliance); //$NON-NLS-1$
+				}
             	if (isDefault) {
-            		JavaCore.setComplianceOptions(compliance, options);
-            		JavaCore.setOptions(options);
+					JavaCore.setComplianceOptions(compliance, options);
+					JavaCore.setOptions(options);
+					if (LaunchingPlugin.isVMLogging()) {
+						LaunchingPlugin.log("Compliance Options are updated."); //$NON-NLS-1$
+					}
             	}
 
             }
@@ -3390,8 +3441,10 @@ public final class JavaRuntime {
 	 * <li>{@link IClasspathAttribute#ADD_EXPORTS}</li>
 	 * <li>{@link IClasspathAttribute#ADD_READS}</li>
 	 * <li>{@link IClasspathAttribute#LIMIT_MODULES}</li>
-	 * <li>{@link IClasspathAttribute#PATCH_MODULE}</li>
 	 * </ul>
+	 * {@link IClasspathAttribute#PATCH_MODULE} is not handled here, but in
+	 * {@link AbstractJavaLaunchConfigurationDelegate#getModuleCLIOptions(ILaunchConfiguration)}, which then collates all options referring to the
+	 * same module.
 	 *
 	 * @since 3.10
 	 */
@@ -3426,7 +3479,7 @@ public final class JavaRuntime {
 			}
 		}
 		catch (CoreException e) {
-			e.printStackTrace();
+			LaunchingPlugin.log(e);
 		}
 		return cliOptionString.toString().trim();
 	}
@@ -3436,6 +3489,7 @@ public final class JavaRuntime {
 	 * {@link IClasspathAttribute}s of the following names:
 	 * <ul>
 	 * <li>{@link IClasspathAttribute#ADD_EXPORTS}</li>
+	 * <li>{@link IClasspathAttribute#ADD_OPENS}</li>
 	 * <li>{@link IClasspathAttribute#ADD_READS}</li>
 	 * <li>{@link IClasspathAttribute#LIMIT_MODULES}</li>
 	 * </ul>
@@ -3459,11 +3513,21 @@ public final class JavaRuntime {
 				String optName = classpathAttribute.getName();
 				switch (optName) {
 					case IClasspathAttribute.ADD_EXPORTS:
-					case IClasspathAttribute.ADD_READS:
-						for (String value : classpathAttribute.getValue().split(COMMA)) {
-							buf.append(OPTION_START).append(optName).append(BLANK).append(value).append(BLANK);
+					case IClasspathAttribute.ADD_OPENS:
+					case IClasspathAttribute.ADD_READS: {
+						String readModules = classpathAttribute.getValue();
+						int equalsIdx = readModules.indexOf('=');
+						if (equalsIdx != -1) {
+							for (String readModule : readModules.split(":")) { //$NON-NLS-1$
+								buf.append(OPTION_START).append(optName).append(BLANK).append(readModule).append(BLANK);
+							}
+						} else {
+							buf.append(OPTION_START).append(optName).append(BLANK).append(readModules).append(BLANK);
 						}
 						break;
+					}
+					// case IClasspathAttribute.PATCH_MODULE: handled in
+					// org.eclipse.jdt.launching.AbstractJavaLaunchConfigurationDelegate.getModuleCLIOptions(ILaunchConfiguration)
 					case IClasspathAttribute.LIMIT_MODULES:
 						addLimitModules(buf, project, systemLibrary, classpathAttribute.getValue());
 						break;
@@ -3472,7 +3536,6 @@ public final class JavaRuntime {
 		}
 		return buf.toString().trim();
 	}
-
 	private static void addLimitModules(StringBuilder buf, IJavaProject prj, IClasspathEntry systemLibrary, String value) throws JavaModelException {
 		String[] modules = value.split(COMMA);
 		boolean isUnnamed = prj.getModuleDescription() == null;
@@ -3480,23 +3543,82 @@ public final class JavaRuntime {
 			Set<String> selected = new HashSet<>(Arrays.asList(modules));
 			List<IPackageFragmentRoot> allSystemRoots = Arrays.asList(prj.findUnfilteredPackageFragmentRoots(systemLibrary));
 			Set<String> defaultModules = getDefaultModules(allSystemRoots);
-			Set<String> limit = new HashSet<>(defaultModules);
-			if (limit.retainAll(selected)) { // limit = selected ∩ default -- only add the option, if limit ⊂ default
+			Set<String> limit = new HashSet<>(defaultModules); // contains some redundancy, but is no full closure
+
+			// selected contains the minimal representation, now compute the transitive closure for comparison with semi-closed defaultModules:
+			Map<String, IModuleDescription> allModules = allSystemRoots.stream() //
+					.map(r -> r.getModuleDescription()) //
+					.filter(Objects::nonNull) //
+					.collect(Collectors.toMap(IModuleDescription::getElementName, module -> module));
+			Set<String> selectedClosure = closure(selected, new HashSet<>(), allModules);
+
+			if (limit.retainAll(selectedClosure)) { // limit = selected ∩ default -- only add the option, if limit ⊂ default
 				if (limit.isEmpty()) {
 					throw new IllegalArgumentException("Cannot hide all modules, at least java.base is required"); //$NON-NLS-1$
 				}
-				buf.append(LIMIT_MODULES).append(joinedSortedList(limit)).append(BLANK);
+				buf.append(LIMIT_MODULES).append(joinedSortedList(reduceNames(limit, allModules.values()))).append(BLANK);
 			}
 
-			Set<String> add = new HashSet<>(selected);
-			add.removeAll(defaultModules);
-			if (!add.isEmpty()) { // add = selected \ default
-				buf.append(ADD_MODULES).append(joinedSortedList(add)).append(BLANK);
+			selectedClosure.removeAll(defaultModules);
+			if (!selectedClosure.isEmpty()) { // add = selected \ default
+				buf.append(ADD_MODULES).append(joinedSortedList(selectedClosure)).append(BLANK);
 			}
 		} else {
 			Arrays.sort(modules);
 			buf.append(LIMIT_MODULES).append(String.join(COMMA, modules)).append(BLANK);
 		}
+	}
+
+	private static Set<String> closure(Collection<String> moduleNames, Set<String> collected, Map<String, IModuleDescription> allModules) {
+		for (String name : moduleNames) {
+			if (collected.add(name)) {
+				IModuleDescription module = allModules.get(name);
+				if (module != null) {
+					try {
+						closure(Arrays.asList(module.getRequiredModuleNames()), collected, allModules);
+					} catch (JavaModelException e) {
+						LaunchingPlugin.log(e);
+					}
+				}
+			}
+		}
+		return collected;
+	}
+
+	private static Collection<String> reduceNames(Collection<String> names, Collection<IModuleDescription> allModules) {
+		// build a reverse dependency tree:
+		Map<String, List<String>> moduleRequiredByModules = new HashMap<>();
+		for (IModuleDescription module : allModules) {
+			if (!names.contains(module.getElementName())) {
+				continue;
+			}
+			try {
+				for (String required : module.getRequiredModuleNames()) {
+					List<String> dominators = moduleRequiredByModules.get(required);
+					if (dominators == null) {
+						moduleRequiredByModules.put(required, dominators = new ArrayList<>());
+					}
+					dominators.add(module.getElementName());
+				}
+			} catch (CoreException e) {
+				LaunchingPlugin.log(e);
+				return names; // unreduced
+			}
+		}
+		// use the tree to find and eliminate redundancy:
+		List<String> reduced = new ArrayList<>();
+		outer: for (String name : names) {
+			List<String> dominators = moduleRequiredByModules.get(name);
+			if (dominators != null) {
+				for (String dominator : dominators) {
+					if (names.contains(dominator)) {
+						continue outer;
+					}
+				}
+			}
+			reduced.add(name);
+		}
+		return reduced;
 	}
 
 	private static Set<String> getDefaultModules(List<IPackageFragmentRoot> allSystemRoots) throws JavaModelException {
