@@ -18,7 +18,7 @@ import org.eclipse.core.internal.databinding.conversion.NumberToFloatConverter;
 import org.eclipse.core.internal.databinding.validation.NumberToFloatValidator;
 import org.eclipse.core.internal.databinding.validation.NumberToNumberValidator;
 
-import com.ibm.icu.text.NumberFormat;
+import java.text.NumberFormat;
 
 /**
  * @since 1.1
@@ -28,7 +28,7 @@ public class NumberToFloatValidatorTest extends
 
 	@Override
 	protected Number doGetOutOfRangeNumber() {
-		return new Double(Double.MAX_VALUE);
+		return Double.valueOf(Double.MAX_VALUE);
 	}
 
 	@Override
