@@ -14,11 +14,11 @@
 
 package org.eclipse.core.tests.internal.databinding.validation;
 
-import org.eclipse.core.databinding.conversion.StringToNumberConverter;
+import java.text.NumberFormat;
+
+import org.eclipse.core.databinding.conversion.text.StringToNumberConverter;
 import org.eclipse.core.databinding.validation.IValidator;
 import org.eclipse.core.internal.databinding.validation.StringToFloatValidator;
-
-import com.ibm.icu.text.NumberFormat;
 
 /**
  * @since 1.1
@@ -28,7 +28,7 @@ public class StringToFloatValidatorTest extends
 
 	@Override
 	protected Number getInRangeNumber() {
-		return new Float(1);
+		return Float.valueOf(1);
 	}
 
 	@Override
@@ -38,7 +38,7 @@ public class StringToFloatValidatorTest extends
 
 	@Override
 	protected Number getOutOfRangeNumber() {
-		return new Double(Double.MAX_VALUE);
+		return Double.valueOf(Double.MAX_VALUE);
 	}
 
 	@Override
